--- a/com.etsoo.SmartERP5/appsettings.json
+++ b/com.etsoo.SmartERP5/appsettings.json
@@ -1,4 +1,17 @@
 {
+  "AppSettings": {
+    "SmartERP": {
+      "ConnectionStringId": "SmartERP",
+      "Cors": [ "http://localhost:3000" ],
+      "PrivateKey": "]nB9]gY!)sL?",
+      "ServiceUserId": "1002",
+      "SSL": true,
+      "SymmetricKey": "*sk29)oO@s9d?lsodi49s830Vn!si39x"
+    }
+  },
+  "ConnectionStrings": {
+    "SmartERP": "Initial Catalog=smarterp_new;Server=(local);User ID=smarterp;Password=smarterp;Enlist=false;Min Pool Size=5"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
