--- a/com.etsoo.Api/appsettings.json
+++ b/com.etsoo.Api/appsettings.json
@@ -2,7 +2,7 @@
   "AppSettings": {
     "SmartERP": {
       "ConnectionStringId": "SmartERP",
-      "Cors": [ "http://localhost:3000" ],
+      "Cors": [ "http://localhost", "http://localhost:3000" ],
       "PrivateKey": "]nB9]gY!)sL?",
       "ServiceUserId": "1002",
       "SSL": true,
